force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Bank_batch__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group__c</fullName>
    <label>Bank </label>
    <length>50</length>
    <type>Text</type>
</CustomField>