force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Bank_Group__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group__c</fullName>
    <label>Bank Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>