force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Bank_Group_Automated__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Bank_Group_Automated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Internal automation will leverage the Payment Method to create Bank Group</description>
    <label>Bank Group Automated</label>
    <type>Checkbox</type>
</CustomField>