force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Fullfilment_Payment_Group__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Fullfilment_Payment_Group__c</fullName>
    <label>Fullfilment Payment Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>