force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Payer_Contact__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Payer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Payer is different from Contact only</inlineHelpText>
    <label>Payer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installments (Payer Contact)</relationshipLabel>
    <relationshipName>Installments</relationshipName>
    <type>Lookup</type>
</CustomField>