force-app/main/default/objects/cpm__Installment__c/fields/SFFR_Type__c.field-meta.xml
<CustomField>
    <fullName>SFFR_Type__c</fullName>
    <label>Type</label>
    <length>38</length>
    <type>Text</type>
</CustomField>