force-app/main/default/objects/cpm__Installment__c/listViews/cpm__All.listView-meta.xml
<ListView>
    <fullName>cpm__All</fullName>
    <columns>NAME</columns>
    <columns>SFFR_Bank_Group__c</columns>
    <columns>cpm__Custom_Payment_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cpm__Installment__c.cpm__Receivable</value>
    </filters>
    <label>All</label>
</ListView>